--- a/framework-webapp/src/main/webapp/pages/systemParameter/list.html
+++ b/framework-webapp/src/main/webapp/pages/systemParameter/list.html
@@ -9,7 +9,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="systemParameter in serviceResponse.results">
+        <tr ng-repeat="systemParameter in serviceResponse.result">
             <td><a href="../pages/#/systemParameter/{{systemParameter.code}}">{{systemParameter.code}}</a></td>
             <td>{{systemParameter.description}}</td>
             <td>{{systemParameter.maximum}}</td>
