--- a/framework-webapp/src/main/webapp/index.html
+++ b/framework-webapp/src/main/webapp/index.html
@@ -20,6 +20,7 @@
 <script src="js/lib/skel-panels.min.js"></script>
 <script src="js/lib/angular.js" type="text/javascript"></script>
 <script src="js/lib/angular-resource.js" type="text/javascript"></script>
+<script src="js/lib/angular-cookies.js" type="text/javascript"></script>
 <script src="js/modules/waffle.js" type="text/javascript"></script>
 <script src="js/modules/systemparameter.js" type="text/javascript"></script>
 <script src="js/modules/login.js" type="text/javascript"></script>
