--- a/framework-webapp/src/main/webapp/index.html
+++ b/framework-webapp/src/main/webapp/index.html
@@ -1,117 +1,50 @@
-
 <!DOCTYPE HTML>
-<!--
-	ZeroFour 2.0 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html ng-app="waffle">
 <head>
 <title>Project Waffle Framework</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="description" content="" />
-<meta name="keywords" content="" />
-<!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800" rel="stylesheet" type="text/css" />
- -->
- <script src="js/lib/jquery.min.js"></script>
- <script src="js/lib/jquery.dropotron.js"></script>
-<script src="js/lib/config.js"></script>
-<script src="js/lib/skel.min.js"></script>
-<script src="js/lib/skel-panels.min.js"></script>
+<link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/normalize.css">
 <script src="js/lib/angular.js" type="text/javascript"></script>
 <script src="js/lib/angular-resource.js" type="text/javascript"></script>
 <script src="js/lib/angular-cookies.js" type="text/javascript"></script>
 <script src="js/modules/waffle.js" type="text/javascript"></script>
 <script src="js/modules/systemparameter.js" type="text/javascript"></script>
 <script src="js/modules/login.js" type="text/javascript"></script>
-
-<noscript>
-    <link rel="stylesheet" href="css/skel-noscript.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style-desktop.css" />
-</noscript>
-<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
-<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-<!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
 </head>
-<body class="no-sidebar">
-    <div id="header-wrapper">
-        <div class="container">
+<body>
+    <header class="row">
+        <div class="large-12 columns">
+            <h1>
+                Project Waffle
+                <small>Restful + HTML5</small>
+            </h1>
+            <hr />
+        </div>
+    </header>
+    <div class="row">
+        <aside class="large-3 columns">
+            <div class="panel">
+                <h5>Categories</h5>
+                <ul class="side-nav">
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Code</a></li>
+                    <li><a href="#">Design</a></li>
+                    <li><a href="#">Fun</a></li>
+                    <li><a href="#">Weasels</a></li>
+                </ul>
+            </div>
+        </aside>
+        <div class="large-9 columns" role="content" ng-view />
+    </div>
+    <footer class="row">
+        <div class="large-12 columns">
+            <hr />
             <div class="row">
-                <div class="12u">
-                    <header id="header">
-                        <div class="inner">
-                            <h1>
-                                <a href="#" id="logo">Project Waffle</a>
-                            </h1>
-                            <nav id="nav">
-                                <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><span>Dropdown</span>
-                                        <ul>
-                                            <li><a href="#">Lorem ipsum dolor</a></li>
-                                            <li><a href="#">Magna phasellus</a></li>
-                                            <li><span>Phasellus consequat</span>
-                                                <ul>
-                                                    <li><a href="#">Lorem ipsum dolor</a></li>
-                                                    <li><a href="#">Phasellus consequat</a></li>
-                                                    <li><a href="#">Magna phasellus</a></li>
-                                                    <li><a href="#">Etiam dolore nisl</a></li>
-                                                </ul></li>
-                                            <li><a href="#">Veroeros feugiat</a></li>
-                                        </ul></li>
-                                    <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                                    <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                                    <li class="current_page_item"><a href="no-sidebar.html">No Sidebar</a></li>
-                                </ul>
-                            </nav>
-
-                        </div>
-                    </header>
-
+                <div class="large-12 columns">
+                    <p>&copy; Developed by <a href="mailto:frederickeyap@gmail.com">Frederick Yap</a></p>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="main-wrapper">
-        <div class="main-wrapper-style2">
-            <div class="inner">
-                <div class="container">
-                    <div class="row">
-                        <div class="12u skel-cell-mainContent">
-                            <div id="content" ng-view></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="footer-wrapper">
-        <footer id="footer" class="container">
-            <div class="row">
-                <div class="12u">
-                    <section>
-                        <h2>Get in touch</h2>
-
-                        <div class="12u">
-                            <dl class="contact">
-                                <dt>WWW</dt>
-                                <dd>
-                                    <a href="https://github.com/ProjectWaffle">Project Waffle</a>
-                                </dd>
-                                <dt>Email</dt>
-                                <dd>
-                                    <a href="mailto:frederickeyap@gmail.com">frederickeyap@gmail.com</a>
-                                </dd>
-                            </dl>
-                        </div>
-                    </section>
-
-                </div>
-            </div>
-        </footer>
-    </div>
-
+    </footer>
 </body>
 </html>
