Change authentication. Use request header instead.

--- a/framework-webapp/src/main/webapp/index.html
+++ b/framework-webapp/src/main/webapp/index.html
@@ -21,7 +21,7 @@
             <hr />
         </div>
     </header>
-    <div class="row">
+    <section class="row">
         <aside class="large-3 columns">
             <div class="panel">
                 <h5>Categories</h5>
@@ -34,8 +34,8 @@
                 </ul>
             </div>
         </aside>
-        <div class="large-9 columns" role="content" ng-view />
-    </div>
+        <div class="large-9 columns" role="content" ng-view></div>
+    </section>
     <footer class="row">
         <div class="large-12 columns">
             <hr />
