--- a/framework-webapp/src/main/webapp/pages/login.html
+++ b/framework-webapp/src/main/webapp/pages/login.html
@@ -4,11 +4,11 @@
     </div>
     <div>
         <label for="username">Username</label>
-        <input name="username" ng-model="user.request.username" required="required" placeholder="username"/>
+        <input name="username" ng-model="user.username" required="required" placeholder="username"/>
     </div>
     <div>
         <label for="password">Password</label>
-        <input name="password" type="password" ng-model="user.request.password" required="required"  placeholder="password"/>
+        <input name="password" type="password" ng-model="user.password" required="required"  placeholder="password"/>
     </div>
     <div>
         <input type="submit" value="Login" />
