--- a/framework-webapp/src/main/webapp/pages/login.html
+++ b/framework-webapp/src/main/webapp/pages/login.html
@@ -1,10 +1,7 @@
 <form id="settingsholder" ng-submit="login()" ng-controller="LoginCtrl">
     <div>
-        {{error}}
-    </div>
-    <div>
         <label for="username">Username</label>
-        <input name="username" ng-model="user.username" required="required" placeholder="username"/>
+        <input name="username" type="text" ng-model="user.username" required="required" placeholder="username"/>
     </div>
     <div>
         <label for="password">Password</label>
@@ -12,5 +9,8 @@
     </div>
     <div>
         <input type="submit" value="Login" />
+    </div>
+    <div style="padding-top: 10px">
+        <label class="error">{{error}}</label>
     </div>
 </form>
