--- a/framework-webapp/src/main/webapp/pages/systemParameter/detail.html
+++ b/framework-webapp/src/main/webapp/pages/systemParameter/detail.html
@@ -1,20 +1,26 @@
-<div>
+<form id="settingsholder" ng-submit="submit()" ng-controller="SystemParameterCtrl">
     <div>
         <label>Code</label>
-        <span>{{systemParameter.code}}</span>
+        <input type="text" ng-model="systemParameter.code"  value="{{systemParameter.code}}" readonly="readonly">
     </div>
     <div>
         <label>Description</label>
-        <span>{{systemParameter.description}}</span>
+        <input type="text" ng-model="systemParameter.description" value="{{systemParameter.description}}" readonly="readonly">
     </div>
     <div ng-switch on="systemParameter.readonly">
         <label>Value</label>
         <span ng-switch-when="true">{{systemParameter.value}}</span>
         <span ng-switch-when="false" ng-switch on="systemParameter.type">
-            <input ng-switch-when="BOOLEAN" type="checkbox" name="systemParameter.value" checked="false" value="{{systemParameter.value}}" />
-            <input ng-switch-when="PASSWORD" type="password" value="{{systemParameter.value}}" />
-            <input ng-switch-when="EMAIL" type="email" value="{{systemParameter.value}}" />
-            <input ng-switch-default type="text" value="{{systemParameter.value}}" />
+            <input ng-model="systemParameter.value" ng-switch-when="BOOLEAN" type="checkbox" name="systemParameter.value" checked="false" value="{{systemParameter.value}}" />
+            <input ng-model="systemParameter.value" ng-switch-when="PASSWORD" type="password" value="{{systemParameter.value}}" />
+            <input ng-model="systemParameter.value" ng-switch-when="EMAIL" type="email" value="{{systemParameter.value}}" />
+            <input ng-model="systemParameter.value" ng-switch-default type="text" value="{{systemParameter.value}}" />
         </span>        
     </div>
-</div>
+    <div>
+        <input type="submit" value="Submit" class="small button"/>
+    </div>
+    <div style="padding-top: 10px">
+        <label class="error">{{error}}</label>
+    </div>
+</form>
