--- a/framework-webapp/src/main/webapp/pages/systemParameter/list.html
+++ b/framework-webapp/src/main/webapp/pages/systemParameter/list.html
@@ -10,7 +10,7 @@
     </thead>
     <tbody>
         <tr ng-repeat="systemParameter in serviceResponse.result">
-            <td><a href="../#/systemParameter/{{systemParameter.code}}">{{systemParameter.code}}</a></td>
+            <td><a href="#/systemParameters/{{systemParameter.code}}">{{systemParameter.code}}</a></td>
             <td>{{systemParameter.description}}</td>
             <td>{{systemParameter.maximum}}</td>
             <td>{{systemParameter.minimum}}</td>
