--- a/framework-webapp/src/main/webapp/pages/configuration/detail.html
+++ b/framework-webapp/src/main/webapp/pages/configuration/detail.html
@@ -1,21 +1,15 @@
-<form id="settingsholder" ng-submit="submit()" ng-controller="SystemParameterCtrl">
+<form id="settingsholder" ng-submit="submit()" ng-controller="ConfigurationEditCtrl">
     <div>
         <label>Code</label>
-        <input type="text" ng-model="systemParameter.code"  value="{{systemParameter.code}}" readonly="readonly">
+        <input type="text" ng-model="configuration.code"  value="{{configuration.code}}" readonly="readonly">
     </div>
     <div>
         <label>Description</label>
-        <input type="text" ng-model="systemParameter.description" value="{{systemParameter.description}}" readonly="readonly">
+        <input type="text" ng-model="configuration.display" value="{{configuration.display}}" readonly="readonly">
     </div>
-    <div ng-switch on="systemParameter.readonly">
+    <div>
         <label>Value</label>
-        <span ng-switch-when="true">{{systemParameter.value}}</span>
-        <span ng-switch-when="false" ng-switch on="systemParameter.type">
-            <input ng-model="systemParameter.value" ng-switch-when="BOOLEAN" type="checkbox" name="systemParameter.value" checked="false" value="{{systemParameter.value}}" />
-            <input ng-model="systemParameter.value" ng-switch-when="PASSWORD" type="password" value="{{systemParameter.value}}" />
-            <input ng-model="systemParameter.value" ng-switch-when="EMAIL" type="email" value="{{systemParameter.value}}" />
-            <input ng-model="systemParameter.value" ng-switch-default type="text" value="{{systemParameter.value}}" />
-        </span>        
+        <input ng-model="configuration.value" type="text" value="{{configuration.value}}" />        
     </div>
     <div>
         <input type="submit" value="Submit" class="small button"/>
