Modify angular crud and authentication.

--- a/framework-webapp/src/main/webapp/index.html
+++ b/framework-webapp/src/main/webapp/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="row">
         <aside class="large-3 columns">
-            <nav class="panel" ng-controller="MenuCtrl">
+            <nav class="panel">
                 <h5>{{error}}</h5>
 <!--                 Categories
                 <ul class="side-nav">
