--- a/framework-webapp/src/main/webapp/pages/configuration/detail.html
+++ b/framework-webapp/src/main/webapp/pages/configuration/detail.html
@@ -1,20 +1,22 @@
-<form id="settingsholder" ng-submit="submit()" ng-controller="ConfigurationEditCtrl">
-    <div>
-        <label>Code</label>
-        <input type="text" ng-model="configuration.code"  value="{{configuration.code}}" readonly="readonly">
-    </div>
-    <div>
-        <label>Description</label>
-        <input type="text" ng-model="configuration.display" value="{{configuration.display}}" readonly="readonly">
-    </div>
-    <div>
-        <label>Value</label>
-        <input ng-model="configuration.value" type="text" value="{{configuration.value}}" />        
-    </div>
-    <div>
-        <input type="submit" value="Submit" class="small button"/>
-    </div>
-    <div style="padding-top: 10px">
-        <label class="error">{{error}}</label>
-    </div>
-</form>
+<div  ng-cloak data-ng-init="edit()">
+    <form id="settingsholder" ng-submit="submit()">
+        <div>
+            <label>Code</label>
+            <input type="text" ng-model="configuration.code" readonly="readonly">
+        </div>
+        <div>
+            <label>Description</label>
+            <input type="text" ng-model="configuration.display" readonly="readonly">
+        </div>
+        <div>
+            <label>Value</label>
+            <input ng-model="configuration.value" type="text" required="required"/>        
+        </div>
+        <div>
+            <input type="submit" value="Submit" class="small button"/>
+        </div>
+        <div style="padding-top: 10px">
+            <label class="error">{{message}}</label>
+        </div>
+    </form>
+</div>
