--- a/framework-webapp/src/main/webapp/pages/configuration/list.html
+++ b/framework-webapp/src/main/webapp/pages/configuration/list.html
@@ -1,16 +1,18 @@
-<table>
-    <thead>
-        <tr>
-            <th>CODE</th>
-            <th>Description</th>
-            <th>Value</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="configuration in configurations">
-            <td><a href="#/configuration/{{configuration.code}}">{{configuration.code}}</a></td>
-            <td>{{configuration.display}}</td>
-            <td>{{configuration.value}}</td>
-        </tr>
-    </tbody>
-</table>
+<div ng-cloak data-ng-init="list()">
+    <table>
+        <thead>
+            <tr>
+                <th>CODE</th>
+                <th>Description</th>
+                <th>Value</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="configuration in configurations">
+                <td><a href="#/configuration/edit/{{configuration.code}}">{{configuration.code}}</a></td>
+                <td>{{configuration.display}}</td>
+                <td>{{configuration.value}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
